# simple-cpp-x86

./: .gitignore  CMakeLists.txt  README.md  _config.yml
docs/: blog-post.md  copilot-modernization-guide.md  copilot-prompts.md  modernizing-big-endian-cpp-for-azure.md  replication-task-plan.md
src/: legacy_bigendian.cpp  pos_transaction.cpp  pos_transaction_x86.cpp  refactored_x86.cpp
